CrOS shelf: use translation for auto-hide instead of altering size

Bug: 891416,886622,888205,887733,881684,822477
Change-Id: Id187d692caf7b9ca8ce4ecee2206dc6420c343c4
Reviewed-on: https://chromium-review.googlesource.com/c/1290056
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602201}
Former-commit-id: ee02be48c59260a48c98ebf3c9a58e1a5dd2b68e