ash/shelf/shelf_layout_manager.cc
@@ -221,7 +221,7 @@ gfx::Rect ShelfLayoutManager::GetIdealBounds() {
 gfx::Size ShelfLayoutManager::GetPreferredSize() {
   TargetBounds target_bounds;
   CalculateTargetBounds(state_, &target_bounds);
-  return target_bounds.shelf_bounds_in_root.size();
+  return target_bounds.shelf_bounds.size();
 }
 
 void ShelfLayoutManager::LayoutShelfAndUpdateBounds() {
@@ -709,7 +709,7 @@ void ShelfLayoutManager::UpdateBoundsAndOpacity(
       status_animation_setter.AddObserver(observer);
 
     GetLayer(shelf_widget_)->SetOpacity(target_bounds.opacity);
-    gfx::Rect shelf_bounds = target_bounds.shelf_bounds_in_root;
+    gfx::Rect shelf_bounds = target_bounds.shelf_bounds;
     ::wm::ConvertRectToScreen(shelf_widget_->GetNativeWindow()->parent(),
                               &shelf_bounds);
     shelf_widget_->SetBounds(shelf_bounds);
@@ -727,7 +727,7 @@ void ShelfLayoutManager::UpdateBoundsAndOpacity(
     // TODO(harrym): Once status area widget is a child view of shelf
     // this can be simplified.
     gfx::Rect status_bounds = target_bounds.status_bounds_in_shelf;
-    status_bounds.Offset(target_bounds.shelf_bounds_in_root.OffsetFromOrigin());
+    status_bounds.Offset(target_bounds.shelf_bounds.OffsetFromOrigin());
     ::wm::ConvertRectToScreen(status_widget->GetNativeWindow()->parent(),
                               &status_bounds);
     status_widget->SetBounds(status_bounds);
@@ -736,14 +736,13 @@ void ShelfLayoutManager::UpdateBoundsAndOpacity(
     // to prevent window movement when the screen is locked: crbug.com/622431
     // The work area is initialized with BOTTOM_LOCKED insets to prevent window
     // movement on async preference initialization in tests: crbug.com/834369
-    const display::Display display =
-        display::Screen::GetScreen()->GetDisplayNearestWindow(
-            shelf_widget_->GetNativeWindow());
+    display_ = display::Screen::GetScreen()->GetDisplayNearestWindow(
+        shelf_widget_->GetNativeWindow());
     bool in_overview =
         Shell::Get()->window_selector_controller()->IsSelecting();
     if (!in_overview && !state_.IsScreenLocked() &&
         (shelf_->alignment() != SHELF_ALIGNMENT_BOTTOM_LOCKED ||
-         display.work_area() == display.bounds())) {
+         display_.work_area() == display_.bounds())) {
       gfx::Insets insets;
       // If user session is blocked (login to new user session or add user to
       // the existing session - multi-profile) then give 100% of work area only
@@ -758,7 +757,7 @@ void ShelfLayoutManager::UpdateBoundsAndOpacity(
 
   // Set an empty border to avoid the shelf view and status area overlapping.
   // TODO(msw): Avoid setting bounds of views within the shelf widget here.
-  gfx::Rect shelf_bounds = gfx::Rect(target_bounds.shelf_bounds_in_root.size());
+  gfx::Rect shelf_bounds = gfx::Rect(target_bounds.shelf_bounds.size());
   shelf_widget_->GetContentsView()->SetBorder(views::CreateEmptyBorder(
       shelf_bounds.InsetsFrom(target_bounds.shelf_bounds_in_shelf)));
   shelf_widget_->GetContentsView()->Layout();
@@ -776,16 +775,16 @@ void ShelfLayoutManager::StopAnimating() {
 
 void ShelfLayoutManager::CalculateTargetBounds(const State& state,
                                                TargetBounds* target_bounds) {
-  int shelf_size = ShelfConstants::shelf_size();
+  const int shelf_size = ShelfConstants::shelf_size();
+  // By default, show the whole shelf on the screen.
+  int shelf_in_screen_portion = shelf_size;
+
   if (state.visibility_state == SHELF_AUTO_HIDE &&
       state.auto_hide_state == SHELF_AUTO_HIDE_HIDDEN) {
-    // Auto-hidden shelf always starts with the default size. If a gesture-drag
-    // is in progress, then the call to UpdateTargetBoundsForGesture() below
-    // takes care of setting the height properly.
-    shelf_size = kShelfAutoHideSize;
+    shelf_in_screen_portion = kHiddenShelfInScreenPortion;
   } else if (state.visibility_state == SHELF_HIDDEN ||
              !keyboard_displaced_bounds_.IsEmpty()) {
-    shelf_size = 0;
+    shelf_in_screen_portion = 0;
   }
 
   aura::Window* shelf_window = shelf_widget_->GetNativeWindow();
@@ -795,14 +794,16 @@ void ShelfLayoutManager::CalculateTargetBounds(const State& state,
       0, accessibility_panel_height_ + docked_magnifier_height_, 0, 0);
   int shelf_width = PrimaryAxisValue(available_bounds.width(), shelf_size);
   int shelf_height = PrimaryAxisValue(shelf_size, available_bounds.height());
-  int bottom_shelf_vertical_offset = available_bounds.bottom() - shelf_height;
-
+  const int shelf_primary_position = SelectValueForShelfAlignment(
+      available_bounds.bottom() - shelf_in_screen_portion,
+      available_bounds.x() - shelf_size + shelf_in_screen_portion,
+      available_bounds.right() - shelf_in_screen_portion);
   gfx::Point shelf_origin = SelectValueForShelfAlignment(
-      gfx::Point(available_bounds.x(), bottom_shelf_vertical_offset),
-      gfx::Point(available_bounds.x(), available_bounds.y()),
-      gfx::Point(available_bounds.right() - shelf_width, available_bounds.y()));
+      gfx::Point(available_bounds.x(), shelf_primary_position),
+      gfx::Point(shelf_primary_position, available_bounds.y()),
+      gfx::Point(shelf_primary_position, available_bounds.y()));
 
-  target_bounds->shelf_bounds_in_root = screen_util::SnapBoundsToDisplayEdge(
+  target_bounds->shelf_bounds = screen_util::SnapBoundsToDisplayEdge(
       gfx::Rect(shelf_origin.x(), shelf_origin.y(), shelf_width, shelf_height),
       shelf_widget_->GetNativeWindow());
 
@@ -857,13 +858,13 @@ void ShelfLayoutManager::CalculateTargetBounds(const State& state,
   // that can change the size of the shelf.
   target_bounds->shelf_bounds_in_shelf = SelectValueForShelfAlignment(
       gfx::Rect(0, 0, shelf_width - status_size.width(),
-                target_bounds->shelf_bounds_in_root.height()),
-      gfx::Rect(0, 0, target_bounds->shelf_bounds_in_root.width(),
+                target_bounds->shelf_bounds.height()),
+      gfx::Rect(0, 0, target_bounds->shelf_bounds.width(),
                 shelf_height - status_size.height()),
-      gfx::Rect(0, 0, target_bounds->shelf_bounds_in_root.width(),
+      gfx::Rect(0, 0, target_bounds->shelf_bounds.width(),
                 shelf_height - status_size.height()));
 
-  available_bounds.Subtract(target_bounds->shelf_bounds_in_root);
+  available_bounds.Subtract(target_bounds->shelf_bounds);
   available_bounds.Subtract(keyboard_occluded_bounds_);
 
   aura::Window* root = shelf_window->GetRootWindow();
@@ -874,10 +875,12 @@ void ShelfLayoutManager::CalculateTargetBounds(const State& state,
 void ShelfLayoutManager::UpdateTargetBoundsForGesture(
     TargetBounds* target_bounds) const {
   CHECK_EQ(GESTURE_DRAG_IN_PROGRESS, gesture_drag_status_);
-  bool horizontal = shelf_->IsHorizontalAlignment();
-  aura::Window* window = shelf_widget_->GetNativeWindow();
-  gfx::Rect available_bounds = screen_util::GetDisplayBoundsWithShelf(window);
+  const bool horizontal = shelf_->IsHorizontalAlignment();
+  const int shelf_size = ShelfConstants::shelf_size();
+  gfx::Rect available_bounds =
+      screen_util::GetDisplayBoundsWithShelf(shelf_widget_->GetNativeWindow());
   int resistance_free_region = 0;
+  bool hidden_at_start = false;
 
   if (gesture_drag_auto_hide_state_ == SHELF_AUTO_HIDE_HIDDEN &&
       visibility_state() == SHELF_AUTO_HIDE &&
@@ -886,7 +889,8 @@ void ShelfLayoutManager::UpdateTargetBoundsForGesture(
     // changed since then, e.g. because the tray-menu was shown because of the
     // drag), then allow the drag some resistance-free region at first to make
     // sure the shelf sticks with the finger until the shelf is visible.
-    resistance_free_region = ShelfConstants::shelf_size() - kShelfAutoHideSize;
+    resistance_free_region = shelf_size - kHiddenShelfInScreenPortion;
+    hidden_at_start = true;
   }
 
   bool resist = SelectValueForShelfAlignment(
@@ -905,39 +909,17 @@ void ShelfLayoutManager::UpdateTargetBoundsForGesture(
   } else {
     translate = gesture_drag_amount_;
   }
+  // Move the shelf with the gesture.
+  const int baseline = SelectValueForShelfAlignment(
+      available_bounds.bottom() - (hidden_at_start ? 0 : shelf_size),
+      available_bounds.x() - (hidden_at_start ? shelf_size : 0),
+      available_bounds.right() - (hidden_at_start ? 0 : shelf_size));
   if (horizontal) {
-    // Move and size the shelf with the gesture.
-    int shelf_height = target_bounds->shelf_bounds_in_root.height() - translate;
-    shelf_height = std::max(shelf_height, 0);
-    target_bounds->shelf_bounds_in_root.set_height(shelf_height);
-    if (shelf_->IsHorizontalAlignment()) {
-      target_bounds->shelf_bounds_in_root.set_y(available_bounds.bottom() -
-                                                shelf_height);
-    }
-
+    target_bounds->shelf_bounds.set_y(baseline + translate);
     target_bounds->status_bounds_in_shelf.set_y(0);
   } else {
-    // Move and size the shelf with the gesture.
-    int shelf_width = target_bounds->shelf_bounds_in_root.width();
-    bool right_aligned = shelf_->alignment() == SHELF_ALIGNMENT_RIGHT;
-    if (right_aligned)
-      shelf_width -= translate;
-    else
-      shelf_width += translate;
-    shelf_width = std::max(shelf_width, 0);
-    target_bounds->shelf_bounds_in_root.set_width(shelf_width);
-    if (right_aligned) {
-      target_bounds->shelf_bounds_in_root.set_x(available_bounds.right() -
-                                                shelf_width);
-    }
-
-    if (right_aligned) {
-      target_bounds->status_bounds_in_shelf.set_x(0);
-    } else {
-      target_bounds->status_bounds_in_shelf.set_x(
-          target_bounds->shelf_bounds_in_root.width() -
-          ShelfConstants::shelf_size());
-    }
+    target_bounds->shelf_bounds.set_x(baseline + translate);
+    target_bounds->status_bounds_in_shelf.set_x(0);
   }
 }
 
@@ -953,8 +935,15 @@ void ShelfLayoutManager::StopAutoHideTimer() {
   mouse_over_shelf_when_auto_hide_timer_started_ = false;
 }
 
+gfx::Rect ShelfLayoutManager::GetVisibleShelfBounds() const {
+  gfx::Rect shelf_region = shelf_widget_->GetWindowBoundsInScreen();
+  DCHECK(!display_.bounds().IsEmpty());
+  shelf_region.Intersect(display_.bounds());
+  return shelf_region;
+}
+
 gfx::Rect ShelfLayoutManager::GetAutoHideShowShelfRegionInScreen() const {
-  gfx::Rect shelf_bounds_in_screen = shelf_widget_->GetWindowBoundsInScreen();
+  gfx::Rect shelf_bounds_in_screen = GetVisibleShelfBounds();
   gfx::Vector2d offset = SelectValueForShelfAlignment(
       gfx::Vector2d(0, shelf_bounds_in_screen.height()),
       gfx::Vector2d(-kMaxAutoHideShowShelfRegionSize, 0),
@@ -1039,7 +1028,7 @@ ShelfAutoHideState ShelfLayoutManager::CalculateAutoHideState(
   if (in_mouse_drag_)
     return SHELF_AUTO_HIDE_HIDDEN;
 
-  gfx::Rect shelf_region = shelf_widget_->GetWindowBoundsInScreen();
+  gfx::Rect shelf_region = GetVisibleShelfBounds();
   if (shelf_widget_->status_area_widget() &&
       shelf_widget_->status_area_widget()->IsMessageBubbleShown() &&
       IsVisible()) {
